--- a/data/feats/class-20-Kl1O0WK37KMTumv1.htm
+++ b/data/feats/class-20-Kl1O0WK37KMTumv1.htm
@@ -1,13 +1,12 @@
 Name: Hidden Paragon
 Nom: Parangon de discrétion
 PrereqEN: legendary in Stealth
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: légendaire en Discrétion
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: When you put your mind to slipping out of sight, you disappear completely.
-Avantage: Quand on s'efforce de se cacher, on disparaît complètement.
+Avantage: Lorsque vous vous cachez, vous disparaissez pendant 1 minute.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
@@ -15,8 +14,7 @@ Avantage: Quand on s'efforce de se cacher, on disparaît complètement.
 <hr />
 <p>When you put your mind to slipping out of sight, you disappear completely. You become invisible for 1 minute, even if you use a hostile action. Not even glitterdust, see invisibility, or similar effects can reveal you, though creatures can still use the Seek action to locate you as normal.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> légendaire en Discrétion</p>
 <p><strong>Fréquence</strong> une fois par heure</p>
-<p><strong>Déclencheur</strong> Vous avez réussi à utiliser Discrétion pour Vous cacher et être caché aux yeux de tous vos adversaires actuels, ou vous avez utilisé Discrétion pour @Compendium[pf2e.actionspf2e.VMozDqMMuK5kpoX4]{Être furtif} et devenir non détecté aux yeux de ces adversaires.</p>
-<hr>
-<p>Quand vous décidez de rester hors de vue, vous disparaissez complètement. Vous devenez invisible pendant 1 minute, même si vous accomplissez une action hostile. Même @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{poussière scintillante}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{détection de l’invisibilité} ou les effets comparables ne suffisent pas à révéler votre présence. Les créatures peuvent cependant utiliser l’action @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Chercher} pour vous localiser normalement.</p>
+<p><strong>Déclencheur</strong> Vous avez réussi à utiliser Discrétion pour Vous cacher et êtes Caché aux yeux de tous vos adversaires actuels ou vous avez utilisé Discrétion pour @Compendium[pf2e.actionspf2e.VMozDqMMuK5kpoX4]{Être furtif} et devenir Non détecté aux yeux de tous vos adversaires actuels.</p>
+<hr />
+<p>Quand vous décidez de rester hors de vue, vous disparaissez complètement. Vous devenez invisible pendant 1 minute, même si vous accomplissez une action hostile. Même @Compendium[pf2e.spells-srd.0qaqksrGGDj74HXE]{Poussière scintillante}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{Détection de l’invisibilité} ou les effets comparables ne suffisent pas à révéler votre présence. Les créatures peuvent cependant utiliser l’action @Compendium[pf2e.actionspf2e.BlAOM2X92SI6HMtJ]{Chercher} pour vous localiser normalement.</p>
