--- a/data/equipment/kit-iKnFPR1X8mOAeVCV.htm
+++ b/data/equipment/kit-iKnFPR1X8mOAeVCV.htm
@@ -1,14 +1,11 @@
 Name: Class Kit (Cleric)
 Nom: Kit de classe (Prêtre)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <div><strong>Gear</strong> adventurer's pack, 2 sets of caltrops, religious symbol (wooden)</div>
 <div><strong>Options</strong> your deity's favored weapon (see the deity entries on pages 437-441; use the Price listed in this chapter), @Compendium[pf2e.equipment-srd.AnwzlOs0njF9Jqnr]{hide armor} (2 gp)</div>
 ------ Description (fr) ------
-<div><strong>Equipement</strong> pack d’aventurier, bandoulière,</div>
-<div>2 jeux de chausse‑ trappes, symbole religieux (en bois) </div>
-<div><strong>Options</strong>  l’arme préférée de votre divinité (voir les</div>
-<div>entrées concernant les divinités aux pages 437 à 441 ; utilisez le prix</div>
-<div>indiqué dans ce chapitre), armure de peau (2 po)</div>
+<p><strong>Equipement</strong> pack d’aventurier, bandoulière,</p>
+<p>2 jeux de chausse‑ trappes, symbole religieux (en bois) </p>
+<p><strong>Options</strong>  l’arme préférée de votre Divinité, @Compendium[pf2e.equipment-srd.AnwzlOs0njF9Jqnr]{Armure de peau} (2 po)</p>
