--- a/data/equipment/kit-gB4kCTgR3b6SJw7n.htm
+++ b/data/equipment/kit-gB4kCTgR3b6SJw7n.htm
@@ -1,7 +1,6 @@
 Name: Class Kit (Champion)
 Nom: Kit de classe (Champion)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <div><strong>Armor</strong> hide armor</div>
@@ -9,8 +8,7 @@ Nom: Kit de classe (Champion)
 <div><strong>Gear</strong> adventurer's pack, crowbar, grappling hook</div>
 <div><strong>Options</strong> @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{Steel Shield} (2 gp), your deity's favored weapon (see the deity entries on pages 437-441; use the Price listed in this chapter)</div>
 ------ Description (fr) ------
-<div><strong>Armure </strong> armure de peau </div>
-<div><strong>Armes</strong>  dague, 4 javelines </div>
-<div><strong>Equipementr</strong>  pack d’aventurier, pied‑de‑biche, grappin, gaine</div>
-<div><strong>Options </strong>l’arme préférée de votre divinité (voir les entrées concernant les divinités</div>
-<div>aux pages 437 à 441 ; utilisez le prix indiqué dans ce chapitre)</div>
+<p><strong>Armure </strong> armure de peau </p>
+<p><strong>Armes</strong>  dague, 4 javelines </p>
+<p><strong>Equipement</strong>  @Compendium[pf2e.equipment-srd.2req0jGaxz8hScdB]{Pack d'aventurier}, pied‑de‑biche, grappin, gaine</p>
+<p><strong>Options </strong> @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{Bouclier en acier}, l’arme préférée de votre Divinité</p>
