--- a/data/feats/class-20-LDIZtE7saDLSBduG.htm
+++ b/data/feats/class-20-LDIZtE7saDLSBduG.htm
@@ -1,13 +1,12 @@
 Name: Reactive Distraction
 Nom: Diversion réactive
 PrereqEN: legendary in Deception|Perfect Distraction
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: légendaire en Duperie|Diversion parfaite
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You reactively switch with your decoy to foil your foe.
-Avantage: Vous changez de leurre de façon réactive pour déjouer votre ennemi.
+Avantage: Vous créez un leurre et changez de place avec lui lorsque vous êtes ciblé.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You would be hit by an attack or targeted by an effect, or you are within an effect's area.</p>
@@ -15,8 +14,7 @@ Avantage: Vous changez de leurre de façon réactive pour déjouer votre ennemi.
 <hr />
 <p>You reactively switch with your decoy to foil your foe. You use Perfection Distraction, even if you were observed, as long as you end the movement of your Sneak while concealed or in a location with cover or greater cover. Your decoy is targeted by the attack or effect instead of you. In the case of an area effect, if your Sneak doesn't move you out of the area, both you and the decoy are targeted by the effect.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> légendaire en Duperie, Diversion parfaite</p>
-<p><strong>Déclencheur</strong> Vous êtes sur le point d’être touché par une attaque, ciblé par un effet, ou vous trouvez dans une zone d’effet.</p>
+<p><strong>Déclencheur</strong> Vous êtes sur le point d’être touché par une attaque, ciblé par un effet ou vous trouvez dans une zone d’effet.</p>
 <p><strong>Conditions</strong> Vous êtes prêt à employer Diversion parfaite.</p>
-<hr>
+<hr />
 <p>Vous changez de place avec votre leurre afin de tromper votre adversaire. Vous utilisez Diversion parfaite, même si vous êtes observé, tant que vous terminez votre déplacement Furtif masqué ou en bénéficiant d’un abri ou d’un abri important. Votre leurre devient la cible de l’attaque ou de l’effet à votre place. Dans le cas d’une zone d’effet, si votre déplacement Furtif ne vous permet pas de quitter la zone, vous et votre leurre êtes tous les deux ciblés par l’effet.</p>
