--- a/data/feats/class-20-Lbpm0OrQb4u2LVtj.htm
+++ b/data/feats/class-20-Lbpm0OrQb4u2LVtj.htm
@@ -2,14 +2,13 @@ Name: Verdant Presence
 Nom: Présence verdoyante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The life-giving properties of the aeon orbs flourish within you.
-Avantage: Les propriétés vitales des orbes éoniques s'épanouissent en vous.
+Avantage: Une fois par heure, la vie se développe autour de vous rendant le terrain difficile ou créant un abri.
 SpoilersEN: Extinction Curse
-SpoilersFR: 
+SpoilersFR: Sentence d'extinction
 
 ------ Description (en) ------
 <section class="details">
@@ -27,8 +26,8 @@ SpoilersFR:
 <p><strong>Fréquence</strong> une fois par heure</p>
 <p><strong>Déclencheur</strong> Vous subissez des dégâts ou lancez un sort primordial</p>
 <hr>
-<p>Les propriétés revitalisantes de l'orbe d'éternité font écho en vous. Des petites plantes ou des champignons apparaissent magiquement sur toutes les surfaces dans une émanation de 18 m autour de vous. Cette vie se fâne après 1 jour à moins que l'environnement ne puisse la supporter. Vous pouvez choisir une des options suivantes à chaque fois que vous utilisez ce don :</p>
+<p>Les propriétés revitalisantes de l'orbe d'éternité font écho en vous. Des petites plantes ou des champignons apparaissent magiquement sur toutes les surfaces dans une émanation de 18 m autour de vous. Cette vie se fâne après 1 jour à moins que l'environnement ne puisse la soutenir. Vous pouvez choisir une des options suivantes à chaque fois que vous utilisez ce don :</p>
 <ul>
-<li>Vous pouvez faire en sorte que tout nombre de cases de 1,5 m dans la zone soit de broussailles qui rendent le terrain difficile et fournissent un camouflage partiel.</li>
-<li>Vous pouvez faire en sorte de faire apparaître un arbre ou un champignon géant dans tout lieu inoccupé dans la zone ; il occupe une case entière de 1,5 m et procure un abri. L'arbre ou le champignon possède une solifité de 5 et possède 50 Points de vie.</li>
+<li>Vous pouvez faire en sorte que tout nombre de cases de 1,5 m dans la zone soit constitué de broussailles qui rendent le terrain difficile et fournissent un abri partiel.</li>
+<li>Vous pouvez faire en sorte de faire apparaître un arbre ou un champignon géant dans tout lieu inoccupé dans la zone ; il occupe une case entière de 1,5 m et procure un abri. L'arbre ou le champignon possède une solidité de 5 et possède 50 Points de vie.</li>
 </ul>
