--- a/data/equipment/equipment-03-zPhqmCvWyHO8i9ws.htm
+++ b/data/equipment/equipment-03-zPhqmCvWyHO8i9ws.htm
@@ -11,3 +11,8 @@ Nom: Pendentif des sciences occultes
 </ul>
 ------ Description (fr) ------
 <p>Cette amulette en forme d’œil aux paupières ouvertes est creuse. Le creux contient le plus souvent un fragment de texte occulte. Lorsque vous portez le pendentif, vous bénéficiez d’un bonus d’objet de +1 aux tests d’Occultisme et vous pouvez lancer le tour de magie assistance divine comme un sort occulte inné</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d'objet de +1 aux tests d'Occultisme</li>
+</ul>
