--- a/data/feats/class-20-UlCbjWWVEmfvaf5a.htm
+++ b/data/feats/class-20-UlCbjWWVEmfvaf5a.htm
@@ -2,14 +2,13 @@ Name: Tenacious Blood Magic
 Nom: Sang magique tenace
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have learned how to invest magic more deeply by witnessing Aroden's works.
-Avantage: Vous avez appris à investir la magie plus profondément en assistant aux travaux d’Aroden.
+Avantage: L'effet de votre magie du sang déclencheuse dure 1 minute au lieu de 1 round.
 SpoilersEN: Extinction Curse
-SpoilersFR: 
+SpoilersFR: Sentence d'extinction
 
 ------ Description (en) ------
 <section class="details">
@@ -21,6 +20,6 @@ SpoilersFR:
 </section>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par minute</p>
-<p><strong>Déclencheur</strong> Vous appliquez un effet de votre sang magique qui dure pendant 1 round.</p>
-<hr>
-<p>Vous avez appris comment investir la magie plus intensément en étant témoin des œuvres d'Aroden. L'effet de sang magique déclencheur dure pendant 1 minute au lieu de 1 round.</p>
+<p><strong>Déclencheur</strong> Vous appliquez un effet de votre magie du sang qui dure pendant 1 round.</p>
+<hr />
+<p>Vous avez appris comment investir la magie plus intensément en étant témoin des œuvres d'Aroden. L'effet de votre magie du sang déclencheuse dure 1 minute au lieu de 1 round.</p>
