--- a/data/feats/general-03-bh2jHyyYrkLMsIdX.htm
+++ b/data/feats/general-03-bh2jHyyYrkLMsIdX.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Procure a piece of adventuring gear.
-Avantage: Vous procure un élément d'équipement
+Avantage: Vous obtenez un élément d'équipement
 
 ------ Description (en) ------
 <p><strong>Cost</strong> the Price of the chosen item</p>
@@ -19,6 +19,6 @@ Avantage: Vous procure un élément d'équipement
 <p><strong>Coût</strong> le Prix de l'objet choisi</p>
 <p><strong>Conditions</strong> Vous n'avez pas utilisé cette capacité depuis la dernière fois que vous avez été capable d'acheter des biens.</p>
 <hr />
-<p>Vous créer régulièrement des plans alambiqués et des alternatives, en utilisant vos ressources pour les accomplir. Vous prenez 1 minute pour ôter de votre sac à dos pour soigneusement en retirer un objet que vous n'aviez pas auparavant déclaré avoir et que vous avez acheté — vous avez eu l'intuition que vous alliez avoir besoin de l'objet et l'avez acheté au cours de la dernière opportunité.</p>
-<p>Lo'bjet doit être un élément d'équipement d'aventure (d'une des tables du livre de base ou d'autres sources d'équipement) et ne peut âs être une arme, une armure, un objet alchimique ou magique ou un autre trésor.</p>
-<p>Il doit être commun avec un niveau qui n'est pas supérieur à la moitié de votre niveau et son Encombrement doit être suffisamment bas pour que le transporter ne vous ait pas rendu encombré.</p>
+<p>Vous créez régulièrement des plans alambiqués et des alternatives, en utilisant vos ressources pour les accomplir. Vous prenez 1 minute pour ôter de votre sac à dos, puis pour soigneusement en retirer un objet que vous n'aviez pas auparavant déclaré avoir et que vous avez acheté — vous avez eu l'intuition que vous alliez avoir besoin de l'objet et l'avez acheté la dernière fois que vous en avez eu l'opportunité.</p>
+<p>L'objet doit être un élément d'équipement d'aventure (d'une des tables du livre de base ou d'autres sources d'équipement) et ne peut pas être une arme, une armure, un objet alchimique ou magique ou un autre trésor.</p>
+<p>Il doit être courant avec un niveau qui ne soit pas supérieur à la moitié de votre niveau et son Encombrement doit être suffisamment faible pour que le transporter ne vous ait pas rendu encombré.</p>
