--- a/data/equipment/equipment-09-bSm0Hki8N2L50OZw.htm
+++ b/data/equipment/equipment-09-bSm0Hki8N2L50OZw.htm
@@ -5,4 +5,4 @@ Nom: Ombre supérieure (rune)
 ------ Description (en) ------
 <p><span>Armor with this rune becomes hazy black. You gain a +2 item bonus to Stealth checks while wearing the armor. </span></p>
 ------ Description (fr) ------
-<p>Une armure avec cette rune devient noire et indistincte. Vous béné‑ ficiez d’un bonus d’objet de +2 aux tests de Discrétion lorsque vous portez l’armure.</p>
+<p>Une armure avec cette rune devient noire et indistincte. Vous bénéficiez d’un bonus d’objet de +2 aux tests de Discrétion lorsque vous portez l’armure.</p>
