--- a/data/equipment/equipment-03-kEy7Uc1VisizGgtf.htm
+++ b/data/equipment/equipment-03-kEy7Uc1VisizGgtf.htm
@@ -5,4 +5,4 @@ Nom: Ombre (rune)
 ------ Description (en) ------
 <p><span>Armor with this rune becomes hazy black. You gain a +1 item bonus to Stealth checks while wearing the armor. </span></p>
 ------ Description (fr) ------
-<p>Une armure avec cette rune devient noire et indistincte. Vous béné‑ ficiez d’un bonus d’objet de +1 aux tests de Discrétion lorsque vous portez l’armure.</p>
+<p>Une armure avec cette rune devient noire et indistincte. Vous bénéficiez d’un bonus d’objet de +1 aux tests de Discrétion lorsque vous portez l’armure.</p>
