--- a/data/equipment/equipment-03-SswqJqeAWGtX3tTF.htm
+++ b/data/equipment/equipment-03-SswqJqeAWGtX3tTF.htm
@@ -11,3 +11,8 @@ Nom: Couvre-chef de thaumaturge
 </ul>
 ------ Description (fr) ------
 <p>Ces couvre‑chefs existent sous de nombreuses formes : ça peut être un turban de couleur ou un chapeau pointu à large bord, sur lesquels sont inscrits des symboles ou des runes. Il vous confère un bonus d’objet de +1 aux tests d’Arcanes et vous permet de lancer le tour de magie prestidigitation comme un sort inné arcanique.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests d’Arcanes</li>
+</ul>
