--- a/data/equipment/equipment-03-ZEqAx8jEc6zhX3V1.htm
+++ b/data/equipment/equipment-03-ZEqAx8jEc6zhX3V1.htm
@@ -14,3 +14,8 @@ Nom: Lunettes de pisteur
 ------ Description (fr) ------
 <p>Ces lunettes aux verres verdoyants sont fixées sur du cuir rugueux avec une simple ficelle. Lorsque vous portez ces lunettes, vous bénéficiez d’un bonus de +1 aux tests de Survie pour Vous orienter et Pister.</p>
 <p>Si vous ratez un test pour Pister, vous pouvez le retenter au bout de trente minutes au lieu d’une heure. </p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus de +1 aux tests de Survie pour Vous orienter et Pister</li>
+</ul>
