--- a/data/equipment/equipment-03-mvMeloQxSiEGIlhL.htm
+++ b/data/equipment/equipment-03-mvMeloQxSiEGIlhL.htm
@@ -12,3 +12,8 @@ Nom: Cape de coyote
 ------ Description (fr) ------
 <p>Ce manteau poussiéreux est taillé dans une miteuse fourrure de coyote brune et grise. Vous gagnez un bonus d’objet de +1 aux tests de Survie. Si vous obtenez un succès critique à votre test de Survie pour Subsister, vous doublez le nombre de créatures supplémentaires que vous pouvez nourrir. </p>
 <p>La cape confère un bonus d’objet de +2, et si vous obtenez un succès critique à un test de Survie pour @Compendium[pf2e.actionspf2e.49y9Ec4bDii8pcD3]{Subsister}, vous quadruplez le nombre de créatures supplémentaires que vous pouvez nourrir. </p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests de Survie.</li>
+</ul>
