--- a/data/equipment/equipment-09-YCjVrQnHfOtpmjYW.htm
+++ b/data/equipment/equipment-09-YCjVrQnHfOtpmjYW.htm
@@ -19,8 +19,8 @@ Nom: Ceinture des cinq rois
 <li>you gain Darkvision</li>
 </ul>
 ------ Description (fr) ------
-<p>Composée de plaques d’argent et d’or imbriquées, cette lourde cein‑ ture est ornée d’images miniatures stylisées représentant cinq rois nains. Vous bénéficiez d’un bonus de circonstances de +1 aux tests de Diplomatie pour Faire bonne impression auprès de nains ou pour Solliciter des nains. Vous bénéficiez également d’un bonus de circonstances de +1 aux tests d’Intimidation contre les géants et les orcs.<br></span></p>
-<p>La ceinture vous confère aussi la vision dans le noir et vous permet de comprendre, parler et écrire le nain.<br></span></p>
+<p>Composée de plaques d’argent et d’or imbriquées, cette lourde cein‑ ture est ornée d’images miniatures stylisées représentant cinq rois nains. Vous bénéficiez d’un bonus de circonstances de +1 aux tests de Diplomatie pour Faire bonne impression auprès de nains ou pour Solliciter des nains. Vous bénéficiez également d’un bonus de circonstances de +1 aux tests d’Intimidation contre les géants et les orcs.</p>
+<p>La ceinture vous confère aussi la vision dans le noir et vous permet de comprendre, parler et écrire le nain.</p>
 <p><strong>Activation</strong><span class="pf2-icon">1</span> Interagir</p> 
 <p><strong>Fréquence</strong> 1/jour</p> 
 <p><strong>Conditions</strong> Vous êtes un nain</p> 
