--- a/data/equipment/equipment-06-hmmDa6LCS22dZT7P.htm
+++ b/data/equipment/equipment-06-hmmDa6LCS22dZT7P.htm
@@ -15,4 +15,4 @@ Nom: Cape de clandestinité
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">D</span> Imaginer, Interagir</p>  
 <p><strong>Fréquence</strong> 1/jour</p> 
-<p><strong>Effet</strong> Vous rabattez la capuche de la cape sur votre tête et bénéficiez des avantages d’une antidétection pendant une heure ou jusqu’à ce que vous retiriez la capuche de votre tête, selon ce qu’il advient en premier.</p>
+<p><strong>Effet</strong> Vous rabattez la capuche de la cape sur votre tête et bénéficiez des avantages d’une @Compendium[pf2e.spells-srd.EoKBlgf6Smt8opaU]{Antidétection} pendant une heure ou jusqu’à ce que vous retiriez la capuche de votre tête, selon ce qu’il advient en premier.</p>
