--- a/data/equipment/equipment-17-kjFFmqci69k2zMXF.htm
+++ b/data/equipment/equipment-17-kjFFmqci69k2zMXF.htm
@@ -1,7 +1,6 @@
 Name: Daredevil Boots (Greater)
 Nom: Bottes de casse-cou (supérieures)
-État: changé
-État d'origine: libre
+État: officielle
 
 ------ Description (en) ------
 <p><span>These brightly colored, soft-soled boots motivate you to perform risky stunts and grant you the agility to succeed. The boots grant you a +3 item bonus to Acrobatics checks and a +2 circumstance bonus to checks to Tumble Through an enemy's space.<br /></span></p>
