--- a/data/equipment/equipment-07-MNBnZn0b80Q7yHJM.htm
+++ b/data/equipment/equipment-07-MNBnZn0b80Q7yHJM.htm
@@ -1,7 +1,5 @@
 Name: Cloak of Elvenkind
-Nom: Cape elfique
-État: changé
-État d'origine: officielle
+Nom: officielle
 
 ------ Description (en) ------
 <p>This cloak is deep green with a voluminous hood, embroidered with gold trim and symbols significant in elven culture. The cloak allows you to cast the @Compendium[pf2e.spells-srd.atlgGNI1E1Ox3O3a]{Ghost Sound} cantrip as an arcane innate spell.</p>
