--- a/data/equipment/equipment-11-gmMrJREf4JSHd2dZ.htm
+++ b/data/equipment/equipment-11-gmMrJREf4JSHd2dZ.htm
@@ -6,7 +6,7 @@ Nom: Impie (rune)
 <p><span>An <em>unholy</em> rune instills fiendish power into the etched weapon. A weapon with this rune deals an additional 1d6 evil damage when it hits a good target. If you are good, you are enfeebled 2 while carrying or wielding this weapon.<br /></span></p>
 <p><span><strong>Activate</strong> <span class="pf2-icon">R</span> command; <strong>Frequency</strong> once per day; <strong>Trigger</strong> You critically succeed at an attack roll against a good creature with the weapon; <strong>Effect</strong> The target takes persistent bleed damage equal to 1d8 per weapon damage die of the etched weapon.</span></p>
 ------ Description (fr) ------
-<p>Une rune impie injecte de l’énergie fiélone dans l’arme gravée. Une arme avec cette rune inflige 1d6 dégâts mauvais supplémentaires quand elle touche une cible d’alignement bon. Si vous êtes d’alignement bon, vous êtes affaibli 2 tant que vous portez ou maniez cette arme.</p>
+<p>Une rune impie injecte de l’énergie fiélone dans l’arme gravée. Une arme avec cette rune inflige 1d6 dégâts mauvais supplémentaires quand elle touche une cible d’alignement bon. Si vous êtes d’alignement bon, vous êtes Affaibli 2 tant que vous portez ou maniez cette arme.</p>
 <p><span><strong>Activation</strong> <span class="pf2-icon">R</span> Sur ordre</p> 
 <p><strong>Fréquence</strong> 1/jour</p>
 <p><strong>Déclencheur</strong>  Vous obtenez un succès critique sur un jet d’attaque avec cette arme contre une créature d’alignement bon</p> <p><strong>Effet</strong> La cible subit un montant de dégâts de saignement persistants égal à 1d8 par dé de dégâts d’arme de l’arme gravée.</p>
