--- a/data/equipment/equipment-03-RgNBGpBc9G2yw1C2.htm
+++ b/data/equipment/equipment-03-RgNBGpBc9G2yw1C2.htm
@@ -12,3 +12,8 @@ Nom: Oculaire d'artisan
 </ul>
 ------ Description (fr) ------
 <p>Ce solide oculaire métallique gravé de motifs carrés se pose devant un seul œil. La rotation du verre révèle le contour flou en trois dimensions d’un objet que vous vous apprêtez à fabriquer ou à réparer, avec des indicateurs utiles sur ses composants. Lorsque vous le portez, cet oculaire vous confère un bonus d’objet de +1 aux tests d’Artisanat. Quand vous Réparez un objet, augmentez les points de vie récupérés de 15 par rang de maîtrise au lieu de 10.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests d’Artisanat</li>
+</ul>
