--- a/data/equipment/equipment-05-K7VHhUamFz3kTnm5.htm
+++ b/data/equipment/equipment-05-K7VHhUamFz3kTnm5.htm
@@ -13,10 +13,10 @@ Nom: Lunettes de nyctalope
 <li>+1 item bonus to Perception checks involving sight</li>
 </ul>
 ------ Description (fr) ------
-<p>Les verres de cristal opaque de ces élégantes lu‑ nettes ne bloquent pas la vision, elles l’améliorent même. Tant que vous portez les lunettes, vous bénéficiez d’un bonus d’objet de +1 aux tests de Perception visuelle.</p>
+<p>Les verres de cristal opaque de ces élégantes lunettes ne bloquent pas la vision, elles l’améliorent même. Tant que vous portez les lunettes, vous bénéficiez d’un bonus d’objet de +1 aux tests de Perception visuelle.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p> 
 <p><strong>Fréquence</strong> 1/jour</p>
-<p><strong>Effet</strong> Tourner les verres de 90 degrés permet d’obtenir la vision dans le noir pendant 1 heure.</p>
+<p><strong>Effet</strong> Tourner les verres de 90 degrés permet d’obtenir la vision dans le noir pendant 1 heure ou jusqu'à ce que l'objet ne soit plus investi.</p>
 <hr />
 <p>Code:</p>
 <ul>
