--- a/data/archetypes/PPmO6FXrl8Otszji.htm
+++ b/data/archetypes/PPmO6FXrl8Otszji.htm
@@ -61,7 +61,7 @@ Nom: Tireur drow
 <p>Vous pouvez tirer un seul coup même si vous n'êtes pas préparé. Vous interagissez pour recharger votre arbalète de poing et Frappez avec elle.</p>
 <hr />
 <p><strong>Spécial</strong> Si vous avez le don @Compendium[pf2e.feats-srd.HvPvyeXM2iMK4OYf]{Entraînement à l'arbalète à répétition}, vous pouvez utiliser ce don avec une @Compendium[pf2e. equipment-srd.zcrIuILnp6oh4dr9]{Arbalète de poing à répétition} pour charger soit un @Compendium[pf2e.equipment-srd.AITVZmakiu3RgfKo]{carreau} soit un @Compendium[pf2e.equipment-srd.9 w8MrBhFtvM7RrYN]{Chargeur}, mais la vitesse fait que vous ne pouvez tirer qu'un seul carreau, avant que le chargeur ne se bloque. Vous devez dépenser une activité d'interaction à 3 actions pour retirer le chargeur bloqué et le vider avant de pouvoir l'utiliser à nouveau.</p>
-<h2>@Compendium[pf2e.feats-srd.HlSwpxreIfsglTJ8]{Empoisonneur narcoleptique} Don 8</h2>
+<h2>@Compendium[pf2e.feats-srd.HlSwpxreIfsglTJ8]{Empoisonneur soporifique} Don 8</h2>
 <p><strong>Prérequis</strong> Dévouement de Tireur drow, qualifié en Artisanat</p>
 <hr />
 <p>Vous'avez appris plus que l'utilisation de l'arbalète de main dans la tradition drow. Lors de vos préparations quotidiennes, vous pouvez préparer une dose de @Compendium[pf2e.equipment-srd.zo0ophqfKunJFxZN]{poison de léthargie} à partir de matériaux ordinaires dans une région sauvage ou urbaine. Si vous'êtes un expert en Artisanat, vous pouvez à la place fabriquer une dose de @Compendium[pf2e.equipment-srd.nn2HAN1XKkKHfVnM]{Poison de Stupeur}.</p>
