--- a/data/equipment/equipment-15-bTLmJMATrrtq8NuT.htm
+++ b/data/equipment/equipment-15-bTLmJMATrrtq8NuT.htm
@@ -8,5 +8,5 @@ Nom: Amulette en écailes de dragon
 ------ Description (fr) ------
 <p><span>Cette amulette est faite à partir d’écailles de cinq dragons vénérables. Vous bénéficiez d’une résistance de 5 à l’acide, au froid, à l’électricité, au feu et au poison. Si le souffle d’un dragon vous inflige des dégâts d’un de ces types, l’amulette se met à briller vivement et, pendant les 10 minutes suivantes, votre résistance contre ce type de dégâts passe à 20. Si vous êtes soumis à la @Compendium[pf2e.bestiary-ability-glossary-srd.etMnv73EIdEZrYYu{Présence terrifiante}  d’un dragon, vous pouvez effectuer deux jets de sauvegarde et garder le meilleur résultat pour déterminer l’effet de son aura. Il s’agit d’un effet de fortune.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">D</span> Sur ordre<strong></p>
-<p>Fréquence</strong> 1 fois par jour
+<p>Fréquence</strong> 1 fois par jour</p>
 <p><strong>Effet</strong> Vous dégagez une aura qui terrifie tous les ennemis dans un rayon de 18 mètres comme avec le pouvoir Présence terrifiante (jet de Volonté DD 34).</p>
