--- a/data/equipment/equipment-13-tDEi3zLVpxwA74qz.htm
+++ b/data/equipment/equipment-13-tDEi3zLVpxwA74qz.htm
@@ -1,7 +1,6 @@
 Name: Wand of Continuation (5th-Level Spell)
 Nom: Baguette de prolongation (sort de niveau 5)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This wand increases a spell's duration. Yellow embers spiral over its surface until the spell ends.</p>
@@ -11,3 +10,7 @@ Nom: Baguette de prolongation (sort de niveau 5)
 <hr />
 <p><strong>Craft Requirements</strong> Supply a casting of a spell of the appropriate level. The spell must have a casting time of <span class="pf2-icon">1</span> or <span class="pf2-icon">2</span> and a duration no less than 10 minutes and no greater than 1 hour.</p>
 ------ Description (fr) ------
+<p>Cette baguette augmente la durée d’un sort. Des braises jaunes décrivent des spirales sur sa surface jusqu’à la fin du sort.</p>
+<p><strong>Activation</strong> Lancer un sort;  l’activation du sort nécessite <span class="pf2-icon">2</span> actions si l'incantation du sort nécessite normalement <span class="pf2-icon">1</span> action ou <span class="pf2-icon">3</span> actions si l'incantation du sort nécessite normalement <span class="pf2-icon">2</span> actions.</p>
+<p><strong>Fréquence</strong> Une fois par jour, plus surcharge</p> 
+<p><strong>Conditions de fabrication</strong>  Fournir une incantation d’un sort du niveau approprié. Le sort doit avoir un temps d’incantation de <span class="pf2-icon">1</span> action ou <span class="pf2-icon">2</span> actions et une durée comprise entre 10 minutes et 1 heure.</p>
