--- a/data/equipment/equipment-17-pDw2wi0znVb8Dysg.htm
+++ b/data/equipment/equipment-17-pDw2wi0znVb8Dysg.htm
@@ -1,7 +1,6 @@
 Name: Dread Blindfold
 Nom: Bandreau d'effroi
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When tied over your eyes, this ragged strip of black linen gives you a +3 item bonus to Intimidation checks and darkvision. You can see through the blindfold, but only using darkvision.</p>
@@ -18,6 +17,16 @@ Nom: Bandreau d'effroi
 <li>Darkvision</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Quand vous l’utilisez pour vous bander les yeux, ce bandeau de lin noir en lambeaux vous confère la vision dans le noir et un bonus d’objet de +3 aux tests d’Intimidation. Vous pouvez voir à travers le bandeau mais seulement en utilisant la vision dans le noir. <br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput">La première fois qu’une créature donnée vous voit lors d’une jour‑ née, elle doit réussir un jet de Volonté DD 37 ou être effrayée 1. Il s’agit d’un effet mental de terreur et d’émotion contre lequel vos alliés de‑ viennent immunisés au bout d’une semaine environ. <br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Activation</strong> <img class="actiondark" style="height: 15px; padding: 0px 2px 0px 2px;" src="https://2e.aonprd.com/Images/Actions/FreeAction.png" alt="Free Action"> sur ordre; <strong>Fréquence</strong> 1/minute; <strong> Déclencheur</strong> Vous blessez une créature en la Frappant; <strong>Effet</strong> Votre cible est saisie par la peur. Cet effet reproduit celui d’un assassin imaginaire DD 37 mais il s’agit d’un enchantement au lieu d’une illusion. Ensuite, la créature est temporairement immunisée pendant 24 h.</span></p>
+<p>Quand vous l’utilisez pour vous bander les yeux, ce bandeau de lin noir en lambeaux vous confère la vision dans le noir et un bonus d’objet de +3 aux tests d’Intimidation. Vous pouvez voir à travers le bandeau mais seulement en utilisant la vision dans le noir. </p>
+<p>La première fois qu’une créature donnée vous voit lors d’une journée, elle doit réussir un jet de Volonté DD 37 ou être Éffrayée 1. Il s’agit d’un effet mental de terreur et d’émotion contre lequel vos alliés deviennent immunisés au bout d’une semaine environ.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Sur ordre</p>
+<p><strong>Fréquence</strong> 1/minute</p> 
+<p><strong> Déclencheur</strong> Vous blessez une créature en la Frappant</p>
+<p><strong>Effet</strong> Votre cible est saisie par la peur. Cet effet reproduit les effets d'  @Compendium[pf2e.spells-srd.tlcrVRqW1MSKJ5IC]{Assassin imaginaire} DD 37 mais il s’agit d’un enchantement au lieu d’une illusion. Ensuite, la créature est temporairement immunisée pendant 24 heures.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +3 aux tests d’Intimidation</li>
+<li>Vision dans le noir</li>
+</ul>
