--- a/data/equipment/equipment-18-vZaXDOrp5Faxw5fS.htm
+++ b/data/equipment/equipment-18-vZaXDOrp5Faxw5fS.htm
@@ -16,7 +16,7 @@ Nom: Livre des possibilités
 </ul>
 ------ Description (fr) ------
 <p>Des pierres semi‑précieuses sont serties dans la couverture de cuivre et d’argent de cet épais et lourd volume. Si vous l’ouvrez avant de l’activer, ses pages de vélin sont vierges et immaculées, mais une fois activé, des mots dansent sur les pages.</p>
-<p><strong>Activation</strong> 10 min (imaginer, Interagir</p>
+<p><strong>Activation</strong> 10 minutes (imaginer, Interagir</p>
 <p><strong>Effet</strong> Vous pensez à un sujet assez vaste sur lequel vous désirez en savoir plus tout en feuilletant le livre. Choisissez une compétence : Arcanes, Artisanat, Médecine, Nature, Occultisme, Religion, Société ou une sous‑catégorie de Connaissances. Les pages du livre se remplissent d’informations sur cette compétence, mais vous êtes le seul à les voir. Tant que les pages sont noires d’écriture, vous pouvez dépenser une action Interagir en parcourant le livre juste avant de faire un test de Se souvenir associé à la compétence choisie. Cela vous donne un bonus d’objet de +3 au test et, si vous essuyez un échec critique, il se transforme en simple échec. Les informations notées dans le livre disparaissent au bout de 24 heures ou si le livre est activé de nouveau.</p>
 <hr />
 <p>Code:</p>
